# skinspire_V2

./: .env  .flaskenv  .gitignore  404_ERRORS_FIXED.md  CLAUDE.md  CSS_Component_batch_analyze.py  DISCOUNT_STACKING_FIXES_Nov_22_2025.md  Dev Database 1.session.sql  Dev Database.session.sql  FIXES_APPLIED_Nov_22_2025.md  FIXES_COMPLETED_Nov_22_2025_Session2.md  Intelli -Clinic_HMS_Executive_Overview.pptx  LOYALTY_SYSTEM_MIGRATION_ANALYSIS.md  LOYALTY_WALLET_COMPLETE_IMPLEMENTATION_Nov_24_2025.md  LOYALTY_WALLET_IMPLEMENTATION_SESSION_Nov_24_2025.md  README.md  Skinspire_Financial_Analysis_2025.pptx  Skinspire_Financial_Analysis_2025_Corrected.pptx  Skinspire_Financial_Analysis_2025_FINAL_v2.pptx  Skinspire_Financial_Analysis_2025_Final.pptx  Skinspire_Financial_Analysis_2025_Formatted - Copy.pptx  Skinspire_Financial_Analysis_2025_Updated.pptx  WALLET_MIGRATION_COMPLETE_Nov_24_2025.md  WALLET_PAYMENT_COMPLETE_Nov_24_2025.md  WALLET_PAYMENT_INTEGRATION_PLAN.md  WALLET_TABLES_ANALYSIS.md  WALLET_UI_IMPLEMENTATION_COMPLETE.md  activate.bat  activate_env.bat  apply_formatting_to_corrected.py  backfill_ar_audit_fields.py  backfill_audit_fields.py  backfill_payment_PMT-2025-000104.py  backfill_payment_PMT-2025-000106.py  cache_cli.py  check_PMT_000102.py  check_all_installment_payments.py  check_all_triggers.py  check_ar_audit_fields.py  check_bulk_discount_config.sql  (+98 more)
.claude/: settings.local.json
Project_docs/: CAMPAIGN_HOOK_ARCHITECTURE.md  GST_RATE_DATE_BASED_DESIGN.md  Linex_Redis_login.md  PRICING_AND_GST_VERSIONING_DESIGN.md  PROMOTIONAL_PRICING_DESIGN.md  (+6 more)
(+1424 files in other folders)
